Clear drop info after performing drops

Otherwise, arrow can stay forever.

Bug: 838791
Change-Id: I2fe13be530a66b587511484ea3d093bc39ad4194
Reviewed-on: https://chromium-review.googlesource.com/1041366
Commit-Queue: Sang Woo Ko <sangwoo108@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556302}
Former-commit-id: 8d70f4adc331afac1cec67ad6f4c538173de6fe3